--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
   },
   "dependencies": {
     "bcryptjs": "^3.0.2",
-    "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^17.2.1",
     "express": "~4.16.1",
+    "express-rate-limit": "^8.0.1",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.17.1",
     "morgan": "~1.9.1"
   },
